# sampler

./: .env  .env_common  .envx  .gdb.tap.sh_profile.rc  .gdbinit_  .gitignore  .gitmodules  .vim.custom  AUTHORS  Android.mk  BUILD  CMakeLists.txt  LICENSE.md  Makefile  NOTES  README.md  README_debian  TODO  libmqueue  list.h  main.c  mlist.c  mlist.h  sampler.c  sampler.h  sampler_exec.c  sampler_local.h  sigstruct.h  template.c
cmake/host/: android_sysroot.sh
cmake/toolchains/: Android.cmake
debugwrap/include/: mqueue.h  pthread.h  semaphore.h
doc/: 0_0_preface.txt  1_1_signal_definition.txt  start_wiki.sh  wiki_config.txt
idoc/: CMakeLists.txt  common.h2m  doc.c
lib/libsampler/: CMakeLists.txt  assert_np.c  assert_np.h  eventgens.c  initfini.c  local.h  master_tasks.c  masters.c  modglobals.c  parse_setup.c  parsers.c  prepare.c  procsubst.c  runengine.c  samplerd.c  sigstruct.h  worker_tasks.c  workers.c
lib/libsampler/include/: README  syncvar.h
lib/libsampler/lib/: README
libmlist/: .cexclude  .gdb.tap.sh_profile.rc  .vim.custom  Android.mk  Makefile  initfini.c  local.h  mlist.c  modglobals.c
libmlist/include/: mlist.h
libsampler/: .vim.custom  Android.mk  Makefile  README  assert_np.h  harvest.c  initfini.c  local.h  master_tasks.c  masters.c  modglobals.c  parse_setup.c  runengine.c  sampler.c  sampler_config.c  sigstruct.h  time.c  worker_tasks.c  workers.c
libsampler/include/: parsers.h  sampler.h
sc-tests/: 0_CPU_frq_0.sig  2_battery_level.sig  README
sc-tests/batt_events/: 1_CPU_frq_1.sig  2_battery_level.sig  README
sc-tests/example/: extmem_volt_freq.sig
sc-tests/thermal_kalix/: 11_GPU_dvfs.sig  2_CPU_frq_2.sig  3_CPU_frq_3.sig  4_tz0.sig  5_tz1.sig  6_tz2.sig  7_tz3.sig  8_tz4.sig  9_tz5.sig
scripts/sample-configurator/: README  line-edit-help.txt  line-edit.sh  sample-edit-help.txt  sample-edit.hlp  sample-edit.sh  sigdef_pack.sh  sigdef_unpack.sh  signal-edit-help.txt  signal-edit.hlp  signal-edit.sh
scripts/sample-configurator/test/: cpu_freq_0.sig  cpu_tz_ntc_ext.sig  gpu_volt_freq.sig
scripts/sample-configurator/ui/: .sample-edit.sh  .signal-edit.sh
scripts/sc/: INSTALL  README  install_desktop.sh  sample-edit.sh  sigdef_pack.sh  sigdef_unpack.sh  signal-edit.sh
scripts/sc/desktop/: sc.sample-edit.sh.desktop  sc.signal-edit.sh.desktop
scripts/sc/ui/: .sample-edit.sh  .sigdef_pack.sh  .sigdef_unpack.sh  .signal-edit.sh
scripts/tests/: README_sam  ale.spc  android_cpufreq_battery_boot_progress.spc  android_cpufreq_tz0.spc  android_cpufreqx4_tzx6.spc  android_plot_cpufreq_tz0.sh  android_plot_cpufreqx4_tzx6.sh  base_cpufreq.spc  base_util.spc  cpu-utilization2.spc  cpu-utilization4.spc  etrace.spc  generic_perf_ibat_template.spc  hemul4ever.sh  host_cpufreq_proc_tz0.spc  host_cpufreq_tz0.spc  host_sinus.spc  plot4_sinus.sh  plot_cpufreq_proc_tz0.sh  plot_cpufreq_tz0.sh  proxy.py  sam  sampler-editor  sampler-plot  sampler_data_adaptors.py  sampler_data_spc.py  sampler_doc.py  sampler_editor.ui  sampler_merger.py  start_sampler.sh  startup.spc  startup_disk.spc  test.sh  touch.spc  touch3.spc  tvist.spc
scripts/tests/test_data/: 140610_tap_movies_with_clock-s5_touch3_time_now.csv  togari_user_14.1.B.1.322_no_changes_startup_sampler_events.csv  togari_user_14.1.B.1.322_no_changes_startup_sampler_events.smpl
somc-sampler/: deb_prepare.sh  somc-sampler-editor.desktop
somc-sampler/deb/DEBIAN/: control  postinst  postrm
testrc/: README  batt_events.ini  batt_events_hemul.ini  event_jogger.ini  kmsg_chardev.ini  kmsg_piped.ini  netcat.ini  power_screen.ini  proc_x8.ini  procstat_cpustates.ini  procstat_stringval.ini  procstat_threads.ini.tmpl  procstat_threads_regexp.ini.tmpl  procstat_threads_revcut.ini.tmpl  procstats.ini  procstats_simpleparser1.ini  procstats_simpleparser2.ini  startup.ini  startup_wmore.ini  testpipe_kmsg.ini  thermal_1.ini  thermal_kalix.ini  thermal_proc.ini
